[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Components/UI/PlanningUI/UnitList.gd" type="Script" id=3]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 base : hint_color;
uniform vec4 highlight : hint_color;

uniform float active = 0.0;

void fragment()
{
	COLOR = base * (1.0 - active) + highlight * (active);
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/base = Color( 0, 0, 0, 1 )
shader_param/highlight = Color( 1, 1, 1, 1 )
shader_param/active = 0.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 160, 180 )

[node name="UnitList" type="Position2D"]
position = Vector2( -100, -150 )
script = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 125.548, 136.759 )
scale = Vector2( 4.97827, 5.58858 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 126, 136.251 )
shape = SubResource( 4 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
